<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.washington.vicky37.quizdroid2.CSMainFragment">


    <TextView
        android:text="@string/CSText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/CSTextView" />

    <TextView
        android:text="@string/oneQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CSTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:id="@+id/CSIntroTextView" />

    <Button
        android:text="@string/buttonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/CSToQuestionButton"
        android:textAllCaps="false"/>

</RelativeLayout>