<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.washington.vicky37.quizdroid2.MathMainFragment">
    <TextView
        android:text="@string/mathText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/mathTextView" />

    <TextView
        android:text="@string/oneQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mathTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:id="@+id/mathIntroTextView" />

    <Button
        android:text="@string/buttonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/mathToQuestionButton"
        android:textAllCaps="false"/>


</RelativeLayout>