<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.washington.vicky37.quizdroid2.PhysicsMainFragment">

    <TextView
        android:text="@string/physicsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/physicsTextView" />

    <TextView
        android:text="@string/oneQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/physicsTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:id="@+id/physicsIntroTextView" />

    <Button
        android:text="@string/buttonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/physicsToQuestionButton"
        android:textAllCaps="false"/>


</RelativeLayout>